WIP: Create new repo and ui

--- a/lib/core/localization/l10n/intl_cs_CZ.arb
+++ b/lib/core/localization/l10n/intl_cs_CZ.arb
@@ -9,6 +9,9 @@
   "vehiclesCompanyVehicles" : "Firemní vozy",
   "vehiclesPersonalVehicles" : "Soukromé vozy",
   "refresh" : "Zkusit znovu",
-  "vehicleDetailNoLocation" : "K tomuto vozidlu nebyly uloženy žádné souřadnice"
+  "vehicleDetailNoLocation" : "K tomuto vozidlu nebyly uloženy žádné souřadnice",
+  "addRefueling" : "Přidat tankovaní",
+  "addTrip" : "Přidat jízdu",
+  "addMaintenance" : "Přidat servis"
 
 }
