--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -9,6 +9,9 @@
   "vehiclesCompanyVehicles" : "Company Vehicles",
   "vehiclesPersonalVehicles" : "Personal Vehicles",
   "refresh" : "REFRESH",
-  "vehicleDetailNoLocation" : "No location recorded"
+  "vehicleDetailNoLocation" : "No location recorded",
+  "addRefueling" : "Přidat tankovaní",
+  "addTrip" : "Přidat jízdu",
+  "addMaintenance" : "Přidat servis"
 
 }
