WIP: Creating new trip 201

--- a/lib/core/localization/l10n/intl_cs_CZ.arb
+++ b/lib/core/localization/l10n/intl_cs_CZ.arb
@@ -21,6 +21,7 @@
   "parkingNote":"Poznámka k parkování",
   "description":"Účel cesty",
   "dateInterval":"Časový interval",
-  "fuelLevel" : "Množství paliva v nádrži"
+  "fuelLevel" : "Množství paliva v nádrži",
+  "vehicles" : "Vozidla"
 
 }
