--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -21,5 +21,6 @@
   "parkingNote":"Parking note",
   "description":"Purpose of trip",
   "dateInterval":"Date interval",
-  "fuelLevel" : "Fuel level"
+  "fuelLevel" : "Fuel level",
+  "vehicles" : "Vehicles"
 }
