FEAT: Deleting a trip

--- a/lib/core/localization/l10n/intl_cs_CZ.arb
+++ b/lib/core/localization/l10n/intl_cs_CZ.arb
@@ -25,6 +25,8 @@
   "vehicles" : "Vozidla",
   "selectMapLocation": "Misto parkování",
   "failedToSaveTrip" : "Jízdu se nepodařilo uložit, je konečný stav km větší než počáteční?",
-  "save": "Uložit"
+  "save": "Uložit",
+  "edit" : "Upravit",
+  "delete" : "Smazat"
 
 }
