--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -25,5 +25,7 @@
   "vehicles" : "Vehicles",
   "selectMapLocation": "Parking spot",
   "failedToSaveTrip" : "Error saving, is your End odometer greater than Begin odometer?",
-  "save": "Save"
+  "save": "Save",
+  "edit" : "Edit",
+  "delete" : "Delete"
 }
