--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -29,5 +29,11 @@
   "save": "Save",
   "edit" : "Edit",
   "delete" : "Delete",
-  "errorCom" : "Error connecting to SSS"
+  "errorCom" : "Error connecting to SSS",
+  "date":"Date",
+  "odometer":"Odometer",
+  "price":"Price",
+  "note":"Note",
+  "yes":"Yes",
+  "no":"No"
 }
