--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -43,5 +43,7 @@
   "failedToRefueling": "Error while saving refueling, check the form data.",
  "validationRequired":"Required value",
  "validationMin1":"Must be greater than 1",
- "validationNumeric":"Must be numeric"
+ "validationNumeric":"Must be numeric",
+ "errorSharedPrefs" : "Error saving token",
+ "errorAuthentication" : "Authentication Error"
 }
