FIX: Refueling no scan

--- a/lib/core/localization/l10n/intl_cs_CZ.arb
+++ b/lib/core/localization/l10n/intl_cs_CZ.arb
@@ -27,6 +27,7 @@
   "failedToSaveTrip" : "Jízdu se nepodařilo uložit, je konečný stav km větší než počáteční?",
   "failedDelete" : "Záznam se nepodařilo smazat",
   "save": "Uložit",
+  "saving": "Ukládání...",
   "edit" : "Upravit",
   "delete" : "Smazat",
   "errorCom" : "Chyba komunikace se SSS",
