--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -27,6 +27,7 @@
   "failedToSaveTrip" : "Error saving, is your End odometer greater than Begin odometer?",
   "failedDelete" : "Error deleting record",
   "save": "Save",
+  "saving": "Saving...",
   "edit" : "Edit",
   "delete" : "Delete",
   "errorCom" : "Error connecting to SSS",
