FEAT: Alert Dialog upon deleting shit

--- a/lib/core/localization/l10n/intl_cs_CZ.arb
+++ b/lib/core/localization/l10n/intl_cs_CZ.arb
@@ -47,5 +47,8 @@
   "validationNumeric":"Musí být číslo",
    "errorSharedPrefs" : "Error při ukládání tokenu",
    "errorAuthentication" : "Chybná autentifikace",
-   "receiptNo":"Číslo dokladu"
+   "receiptNo":"Číslo dokladu",
+   "keep":"Ponechat",
+   "deleteRecord": "Opravdu chcete tento záznam smazat?"
+
 }
