--- a/lib/core/localization/l10n/intl_en_US.arb
+++ b/lib/core/localization/l10n/intl_en_US.arb
@@ -47,5 +47,7 @@
  "validationNumeric":"Must be numeric",
  "errorSharedPrefs" : "Error saving token",
  "errorAuthentication" : "Authentication Error",
- "receiptNo":"Receipt Number"
+ "receiptNo":"Receipt Number",
+ "keep":"Keep",
+ "deleteRecord": "Are you sure, you wish to delete this record?"
 }
